# linked-claims-extractor

./: .env.example  .gitignore  COMPLETE_EXTRACTION_WORKFLOW.md  DEVELOPMENT_SETUP.md  IMPACT_CLAIMS_GUIDE.md  PROJECT_GUIDE.md  PUBLISH.md  README.md  analyze_extraction_patterns.py  claims_analysis_v2.html  demo_app.py  extraction_test_results_20250824_154425.json  extraction_test_results_20250824_171126.json  extraction_test_results_20250824_171835.json  gunicorn.conf.py  hub-ideas-jun3.md  impact_claims_client.py  integrate_with_linkedtrust.py  key_manager.py  linkedtrust_client.py  next_steps.md  pages_text_claims_v2.html  pdf_parser_MAINTAINANCE_GUIDE.md  pyproject.toml  req.txt  req1.txt  roadmap.md  setup_local_dev.sh  test.py  test_different_documents.py  test_document.txt  test_environmental_data.txt  test_extractor.py  test_financial_claims.txt  test_microsoft_report.txt  test_real_document.py  test_real_world_amazon.txt  test_real_world_patagonia.txt  test_real_world_unilever.txt  test_social_impact.txt  (+1 more)
claim_extractor/: README.md  extract_claims_test.py  pyproject.toml  test.py
claim_extractor/src/claim_extractor/: llm_extract.py
claim_extractor/tests/: test_extractor.py
impact-verification-demo/: README.md  ROADMAP.md  package.json
impact-verification-demo/public/: index.html  manifest.json
impact-verification-demo/src/: App.js
pdf_parser/: 3.7.0  README.md  pyproject.toml  requirements.txt  sym
pdf_parser/src/: app.py  cache_manager.py  claim_viz.py  document_repl.py  main.py  req_pdf_parser.txt  sample_pdf.py
pdf_parser/src/pdf_parser/: __init__.py  cache_manager.py  document_manager.py  document_repl.py  pdf_extractor.py  pdf_processor.py  sample_pdf.py  setup.py
pdf_parser/src/templates/: base.html  claims.html  upload.html  view_claims.html
pdf_parser/tests/: test_document_manager.py
scratch/: pipevec.py
service/: INTEGRATION_README.md  README.md  app.py  requirements.txt  setup_integration.sh  test_integration.py
service/backend_client/: __init__.py  api_client.py
src/claim_extractor/: llm_extract.py
src/claim_extractor/schemas/: loader.py
src/pdf_parser/: document_manager.py  main.py  pdf_processor.py  proc_pdf.py  requirements.txt  sample_pdf.py
src/pdf_parser/chroma_db/: chroma.sqlite3
templates/: index.html
tests/claim_extractor/: test_extractor.py
