[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-parser"
version = "0.1.0"
description = "PDF processing tools for claim extraction"
readme = "README.md"
authors = [
    { name = "Golda Velez", email = "gvelez17@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyMuPDF",
    "transformers",
    "sentence-transformers",
    "Pillow",
    "chromadb",
    "linked-claims-extractor>=0.1.1"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
