[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf_parser"
version = "0.1.0"
description = "PDF processing tools for claim extraction"
readme = "README.md"
authors = [
    { name = "Golda Velez", email = "gvelez17@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "PyMuPDF",
    "transformers",
    "sentence-transformers",
    "Pillow",
    "chromadb",
    "linked-claims-extractor>=0.1.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pdf_parser*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:importlib._bootstrap:",
    "ignore::DeprecationWarning:sys:",
]
